--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "^1.6.2",
     "angular-animate": "^1.6.2",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "angular-route": "^1.6.2"
   }
 }
